--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,7 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+
+Readme_local.md
+Readme_deploye.md
+WeatherApp_API_Project.pdf
